spade-tests/src/snapshots/spade_tests__typeinference__negative_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[-1:5]
}


error: Range indices must be non-negative
  ┌─ testinput:2:7
  │
2 │     x[-1:5]
  │       ^^ Range index is negative
